# EMharvest

./: Dockerfile  README.md  emh.py  pyproject.toml  requirements.txt  setup.py
core/: emharvest_main.py  harvestor.py  mmcif_writer.py  save_deposition_file.py  tomo_mdoc_data.py  xml_data_harvest.py
emharvest/: atlas_files.py  emharvest_main.py  foilHole_data.py  harvestor.py  mmcif_validator.py  mmcif_writer.py  save_deposition_file.py  tomo_mdoc_data.py
harvested/Supervisor_20230919_140141_84_bi23047-106_grid1/: Supervisor_20230919_140141_84_bi23047-106_grid1_dep.checksum  Supervisor_20230919_140141_84_bi23047-106_grid1_dep.cif  Supervisor_20230919_140141_84_bi23047-106_grid1_dep.csv  Supervisor_20230919_140141_84_bi23047-106_grid1_dep.json  val_Supervisor_20230919_140141_84_bi23047-106_grid1.txt
harvested/bi23047-93/: 2ad24752-ce2c-40c8-904a-e5972f69da7e_dep.checksum  2ad24752-ce2c-40c8-904a-e5972f69da7e_dep.cif  2ad24752-ce2c-40c8-904a-e5972f69da7e_dep.csv  2ad24752-ce2c-40c8-904a-e5972f69da7e_dep.json  val_2ad24752-ce2c-40c8-904a-e5972f69da7e.txt
harvested/cm33879-3/: dea57c9e-3b44-4250-8d95-750878c8ecb3_dep.checksum  dea57c9e-3b44-4250-8d95-750878c8ecb3_dep.cif  dea57c9e-3b44-4250-8d95-750878c8ecb3_dep.csv  dea57c9e-3b44-4250-8d95-750878c8ecb3_dep.json  val_dea57c9e-3b44-4250-8d95-750878c8ecb3.txt
harvested/ebic_tomo/: 88415364-c070-4f92-8adb-b826f79d8ccc_dep.checksum  88415364-c070-4f92-8adb-b826f79d8ccc_dep.cif  88415364-c070-4f92-8adb-b826f79d8ccc_dep.csv  88415364-c070-4f92-8adb-b826f79d8ccc_dep.json  val_88415364-c070-4f92-8adb-b826f79d8ccc.txt
harvested/serialEM_SPA/: SerialEM_microscopy_data_dep.checksum  SerialEM_microscopy_data_dep.cif  SerialEM_microscopy_data_dep.csv  SerialEM_microscopy_data_dep.json  val_SerialEM_microscopy_data.txt
harvested/serialEM_tomo/: 88415364-c070-4f92-8adb-b826f79d8ccc_dep.checksum  88415364-c070-4f92-8adb-b826f79d8ccc_dep.cif  88415364-c070-4f92-8adb-b826f79d8ccc_dep.csv  88415364-c070-4f92-8adb-b826f79d8ccc_dep.json  SerialEM_microscopy_data_dep.checksum  SerialEM_microscopy_data_dep.cif  SerialEM_microscopy_data_dep.csv  SerialEM_microscopy_data_dep.json  val_88415364-c070-4f92-8adb-b826f79d8ccc.txt  val_SerialEM_microscopy_data.txt
